--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-    <h1 class="">Glintlit<span>Dot your website !</span></h1>
-    <div class="">
-        <div class="">
-            <div class="">
+    <div class="header"><h1 class="">Glintlit<span id="right">Dot your website !</span></h1></div>
+        <div id="content">
+            <div class="set1">
                 <h2>Glintlit</h2>
                 <h4>Lean-Code-Build</h4>
                 <ul>
@@ -25,7 +24,7 @@
                     <li>4+ week</li>
                 </ul>
             </div>
-            <div class="">
+            <div class="set2">
                 <h2>Git &Github</h2>
                 <p>Git is a free and open source<br> distributed version control <br>system designed to handle
                     everything <br> from
@@ -42,7 +41,7 @@
                     of a document<br> written in a
                     markup language such as HTML.</p>
             </div>
-            <div class="">
+            <div class="set3">
                 <h2>Basics of JavaScript</h2>
                 <p>JavaScript is a programming language<br> commonly used in web development.<br> It was originally
                     developed by Netscape<br> as a
@@ -55,7 +54,7 @@
                 <p>Bootstrap is a free and open-source<br> CSS framework directed at responsive,<br> mobile-first
                     front-end web development.</p>
             </div>
-            <div class="">
+            <div class="set4">
                 <h2>Our Team</h2>
                 <ul>
                     <li>BugBusters</li>
@@ -67,10 +66,10 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <footer>
-        <p>All Rights Reserved. &copy; Glintlit team </p>
-    </footer>
 </body>
+<footer>
+    <p>All Rights Reserved. &copy; Glintlit team </p>
+</footer>
+
 
 </html> 
